<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>glim_octomap</name>
  <version>0.0.0</version>
  <description>3D Octomap generation module for GLIM</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>glim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>